// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOrderBookSnapshot , with result 1`] = `
Array [
  Array [
    "orderBooks|snapshot|pair",
  ],
]
`;

exports[`getOrderBookSnapshot , with result 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567890000,
}
`;

exports[`getOrderBookSnapshot , without result 1`] = `
Array [
  Array [
    "orderBooks|snapshot|pair",
  ],
]
`;

exports[`getOrderBookSnapshot , without result 2`] = `null`;

exports[`publishOrderBookUpdate, throw Error 1`] = `
Array [
  Array [
    "orderBooks|snapshot|pair",
    "{\\"pair\\":\\"pair\\",\\"version\\":1234567890000,\\"bids\\":[{\\"price\\":120,\\"balance\\":20,\\"count\\":4},{\\"price\\":110,\\"balance\\":10,\\"count\\":6},{\\"price\\":100,\\"balance\\":30,\\"count\\":5}],\\"asks\\":[{\\"price\\":130,\\"balance\\":20,\\"count\\":4},{\\"price\\":140,\\"balance\\":10,\\"count\\":6},{\\"price\\":150,\\"balance\\":30,\\"count\\":5}]}",
  ],
]
`;

exports[`publishOrderBookUpdate, with update 1`] = `
Array [
  Array [
    "orderBooks|snapshot|pair",
    "{\\"pair\\":\\"pair\\",\\"version\\":1234567890000,\\"bids\\":[{\\"price\\":120,\\"balance\\":20,\\"count\\":4},{\\"price\\":110,\\"balance\\":10,\\"count\\":6},{\\"price\\":100,\\"balance\\":30,\\"count\\":5}],\\"asks\\":[{\\"price\\":130,\\"balance\\":20,\\"count\\":4},{\\"price\\":140,\\"balance\\":10,\\"count\\":6},{\\"price\\":150,\\"balance\\":30,\\"count\\":5}]}",
  ],
]
`;

exports[`publishOrderBookUpdate, with update 2`] = `
Array [
  Array [
    "orderBooks|update|pair",
    "{\\"pair\\":\\"pair\\",\\"updates\\":[{\\"price\\":1,\\"change\\":2,\\"count\\":3,\\"side\\":\\"ask\\"}],\\"prevVersion\\":1234567890000,\\"version\\":1234567990000}",
  ],
]
`;

exports[`publishOrderBookUpdate, withoutsnpashot update 1`] = `
Array [
  Array [
    "orderBooks|snapshot|pair",
    "{\\"pair\\":\\"pair\\",\\"version\\":1234567890000,\\"bids\\":[{\\"price\\":120,\\"balance\\":20,\\"count\\":4},{\\"price\\":110,\\"balance\\":10,\\"count\\":6},{\\"price\\":100,\\"balance\\":30,\\"count\\":5}],\\"asks\\":[{\\"price\\":130,\\"balance\\":20,\\"count\\":4},{\\"price\\":140,\\"balance\\":10,\\"count\\":6},{\\"price\\":150,\\"balance\\":30,\\"count\\":5}]}",
  ],
]
`;

exports[`subscribeOrderBookUpdate 1`] = `
Array [
  Array [
    "orderBooks|update|pair",
  ],
]
`;

exports[`unsubscribeOrderBookUpdate 1`] = `
Array [
  Array [
    "orderBooks|update|pair",
  ],
]
`;
